# ftrl-auc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  data_preprocess.py  draw_comparision.py  draw_toy_example.py  readme.txt  slurm-641032.out  slurm-641033.out  slurm-641034.out  slurm_run.sh  slurm_run_huge.sh  test_on_high_dim.py  test_on_high_imbalance.py  test_on_simu.py
algo_wrapper/: fast_pcst.c  fast_pcst.h  main_wrapper.c  online_methods.c  online_methods.h  read_svm.c
code/: build.sh  data_preprocess.py  draw_figure_1_2_9.py  test_on_high_dim.py  test_on_high_imbalance.py
code/algo_wrapper/: loss.c  main_wrapper.c  online_methods.h  sort.c  sort.h
figures/: data_fig10.pkl  data_fig11.pkl  data_fig3.pkl  data_fig4.pkl  data_fig6.pkl  data_fig8.pkl
results/: re_02_real_sim_adagrad_imbalance_0.05.pkl  re_02_real_sim_adagrad_imbalance_0.1.pkl  re_02_real_sim_ftrl_auc.pkl  re_02_real_sim_ftrl_auc_imbalance_0.05.pkl  re_02_real_sim_ftrl_auc_imbalance_0.1.pkl  re_02_real_sim_ftrl_proximal.pkl  re_02_real_sim_ftrl_proximal_imbalance_0.05.pkl  re_02_real_sim_ftrl_proximal_imbalance_0.1.pkl  re_03_rcv1_bin_ftrl_auc_imbalance_0.05.pkl  re_03_rcv1_bin_ftrl_proximal_imbalance_0.05.pkl  re_03_rcv1_bin_ftrl_proximal_imbalance_0.1.pkl  re_04_farmads_ftrl_auc.pkl  re_04_farmads_ftrl_auc_imbalance_0.05.pkl  re_04_farmads_ftrl_auc_imbalance_0.1.pkl  re_04_farmads_ftrl_proximal.pkl  re_04_farmads_ftrl_proximal_imbalance_0.05.pkl  re_04_farmads_ftrl_proximal_imbalance_0.1.pkl
